--- a/SimpleTemplate/cloudformation.template
+++ b/SimpleTemplate/cloudformation.template
@@ -1,14 +1,45 @@
-﻿{
+{
 	"AWSTemplateFormatVersion" : "2010-09-09",
 
-	"Description" : "",
-
-	"Parameters" : {
-	},
+	"Description" : "Single Instance",
 
 	"Resources" : {
-	},
-
-	"Outputs" : {
+		"Web1" : {
+			"Type" : "AWS::EC2::Instance",
+			"Properties" : {
+				"ImageId" : "ami-08111162",
+				"InstanceType" : "t2.micro",
+				"SecurityGroups" : [
+					{"Ref" : "WebSecurityGroup"}
+				],
+				"KeyName" : "virginia",
+				"Tags"	: [
+					{
+						"Key" : "Name",
+						"Value":"Web1"
+					}
+				]
+			}
+		},
+		"WebSecurityGroup" : {
+			"Type" : "AWS::EC2::SecurityGroup",
+			"Properties" : {
+				"GroupDescription" : "Enable HTTP and SSH access",
+				"SecurityGroupIngress" : [
+					{
+						"IpProtocol" : "tcp",
+						"FromPort" : "80",
+						"ToPort" : "80",
+						"CidrIp" : "0.0.0.0/0"
+					},
+					{
+						"IpProtocol" : "tcp",
+						"FromPort" : "22",
+						"ToPort" : "22",
+						"CidrIp" : "0.0.0.0/0"
+					}
+				]
+			}		
+		}
 	}
 }
