--- a/SimpleTemplate/cloudformation.template
+++ b/SimpleTemplate/cloudformation.template
@@ -22,6 +22,16 @@
 			],
 			"ConstraintDescription" : "must be a valid EC2 instance type"
 		},
+		"SSHLocation"  : {
+			"Description" : " The IP address range that can be used to SSH to the EC2 instances",
+			"Type"		: "String",
+			"MinLength"	: "9",
+			"MaxLength" : "18",
+			"Default"	: "0.0.0.0/0",
+			"AllowedPattern" : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,2})",
+			"ConstraintDescription" : "must be a valid IP CIDR range of the form x.x.x.x/x."
+			}
+		},
 
 
 
@@ -30,7 +40,7 @@
 			"Type" : "AWS::EC2::Instance",
 			"Properties" : {
 				"ImageId" : "ami-08111162",
-				"InstanceType" : "t2.micro",
+				"InstanceType" : {"Ref" : "InstanceType"},
 				"SecurityGroups" : [
 					{"Ref" : "WebSecurityGroup"}
 				],
